--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,22 @@
 {
-  "background_color": "#0f0f1b",
-  "dir": "ltr",
+  "name": "NBA Latest Moves",
+  "short_name": "NBA App",
+  "description": "Real-time NBA player statistics and notifications",
+  "start_url": "/nbapp/",
   "display": "standalone",
-  "name": "Top Data NBApp",
-  "orientation": "any",
-  "scope": "/",
-  "short_name": "NBApp",
-  "start_url": "/",
+  "background_color": "#0f0f1b",
   "theme_color": "#ff4655",
-  "description": "Real-time All-Time NBA player statistics and latest moves"
+  "orientation": "portrait-primary",
+  "icons": [
+    {
+      "src": "/nbapp/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/nbapp/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
